syntax = "proto2";

package mediapipe;

option java_package = "com.google.mediapipe.formats.proto";
option java_outer_classname = "ColorLutProto";

message ColorLut {
  optional string lut_path = 1;
  optional float intensity = 2;
  optional float grain = 3;
  optional float vignette = 4;
  optional float radial_blur = 5;
  optional float rgb_split = 6;
  optional string blend_image_path_1 = 7;
  optional int32 blend_mode_1 = 8;
  optional string blend_image_path_2 = 9;
  optional int32 blend_mode_2 = 10;
}